# SkillSphere-Dapp

./: .gitignore  0001-feat-dahoard-layout-with-nav-bar-changes-and-respons.patch  FEATURES_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_START.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  pr.md
.github/workflows/: frontend.yml  soroban-contract.yml  soroban.yml
.storybook/: main.ts  tsconfig.json
contracts/: ARBITRATOR_GUIDE.md  Cargo.toml  GAS_SPONSORSHIP.md  README.md
contracts/docs/: api_schema.json
contracts/src/: admin.rs  bridge.rs  crypto.rs  dex.rs  disputes.rs  errors.rs  events.rs  governance.rs  identity.rs  lib.rs  migrations.rs  oracles.rs  recovery.rs  reputation.rs  roles.rs  scheduling.rs  security.rs  storage.rs  timelock.rs  treasury.rs
docs/: BRIDGE_DESIGN.md  PROFILE_HEADER_REFACTOR.md  WEBHOOK_RELAY.md  ZK_IDENTITY.md  archival_recovery.md  ui-specs.md
docs/api/: bruno.json  mainnet.env  testnet.env
indexer/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
indexer/prisma/: schema.prisma
indexer/src/: event_types.rs  graphql.rs  listener.rs  main.rs  store.rs  sync.ts
pages/: test.tsx
public/: manifest.json  sw-register.js  sw.js
scripts/: package-lock.json  package.json  restore_state.ts  sandbox.sh  tsconfig.json
sdk/typescript/: README.md  index.ts  package.json
services/notifier/: index.ts  notifier.test.ts  package.json
skillsphere-dapp/: package-lock.json
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
(+271 files in other folders)
