[package]
name = "skillsphere-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
proptest = { version = "1.4.0", default-features = false, features = ["std"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

[[test]]
name = "fuzz_claimable"
path = "fuzz/fuzz_claimable.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true