[package]
name = "skillsphere-indexer"
version = "0.1.0"
edition = "2021"
publish = false
description = "Event listener daemon + GraphQL surface for the SkillSphere Soroban contract"

[[bin]]
name = "skillsphere-indexer"
path = "src/main.rs"

[dependencies]
# Stdlib only at MVP. Production deployments swap the stub
# `SorobanRpcClient` for `soroban-rpc-client` or `stellar-rpc-client`,
# the stub `MemoryStore` for `sqlx`/`tokio-postgres` or `redis`, and
# wire `async-graphql` (or `juniper`) when activating the HTTP layer.

[dev-dependencies]
